# mermaidpix

./: .cursorrules  .flake8  .gitignore  README.md  README_OUT.md  pyproject.toml
demo/: demo01.md  demo01_out.md  demo01_output.md
mermaidpix/: file_processor.py  logger.py  main.py  mermaid_converter.py
